--- a/package.json
+++ b/package.json
@@ -1,14 +1,13 @@
 {
   "name": "tarsius-messaging-email-local",
-  "version": "1.0.0",
-  "private": true,
+  "version": "0.0.1",
   "description": "tarsius plugin for send email via local mail server",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
-  "license": "ISC",
+  "author": "muhammad hasan <hasan@lussa.net>",
+  "license": "MIT",
   "dependencies": {
     "nodemailer": "^1.10.0",
     "nodemailer-html-to-text": "^1.0.2"
@@ -17,5 +16,17 @@
     "type": "messaging.email",
     "name": "Local server mail gateway",
     "configs": []
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/lussatech/tarsius-messaging-email-local.git"
+  },
+  "keywords": [
+    "email",
+    "tarsius"
+  ],
+  "bugs": {
+    "url": "https://github.com/lussatech/tarsius-messaging-email-local/issues"
+  },
+  "homepage": "https://github.com/lussatech/tarsius-messaging-email-local#readme"
 }
